force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <label>Registration</label>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>