force-app/main/default/objects/Registration__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <label>Contacts</label>
    <referenceTo>Contacts__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>