force-app/main/default/objects/Registration__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>ZipCode</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>